Changes for Perl extension Imager-Search

0.10 Wed  1 Aug 2007
	- Redesigned the API from scratch to be more scalable

0.05 Mon 30 Jul 2007
	- Adding a missing dependency

0.04 Sun 29 Jul 2007
	- Changed the calling semantics of the driver API to prevent several
	  large needless memory copies.

0.03 Sun 29 Jul 2007
	- Adding the ->find method to return all matches
	- Updated the test images to ensure the regex finds
	- Multiple overlapping patterns

0.02 Sun 29 Jul 2007
	- Divide the match position by 7 to get the correct location
	- Added proof of concept for using the @- and scalar //g with
	  pos manipulation to allow multiple, overlapping, matches.

0.01 Sun 29 Jul 2007
	- Creating initial version